# UNX-DJ-ENGINE

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  XDJ UNX.code-workspace  build.bat  build.sh  build_log.txt  build_out.txt  build_raylib_desktop.bat  deckstrip_old.c  deckstrip_old_utf8.c  index.html  mapping.midi.xml  settings.json  test.h  xdjunx.exe 
.github/workflows/: android-build.yml  android.yml  ios-trollstore.yml  ios.yml  linux.yml  windows.yml
android/: AndroidManifest.xml  Makefile.android
controllers/: LoopMIDI.midi.xml  Template.midi.xml
include/input/: keyboard.h
include/ui/browser/: browser.h
include/ui/components/: component.h  fonts.h  helpers.h  theme.h
include/ui/player/: deckstrip.h  player.h  player_state.h  waveform.h
include/ui/views/: splash.h
ios/: Entitlements.plist  Info.plist  Makefile.ios
lib/kaitai/kaitai/: kaitaistream.cpp
lib/linux_arm64/: data.tar.xz  libdrm-dev.deb  libdrm2.deb  libegl-dev.deb  libegl1.deb  libgbm-dev.deb  libgbm1.deb  libgles2.deb  libxcb.so.1.1.0
lib/rekordbox-metadata/: rekordbox_pdb.cpp
lib/rubberband/: RubberBandStretcher.h
lib/serato/: serato_parser.cpp  serato_parser.h  serato_tags.cpp  serato_tags.h  serato_waveform.cpp  serato_waveform.h
lib/soundtouch/: AAFilter.cpp  RateTransposer.cpp  SoundTouch.cpp  SoundTouch.h
plan/: ios_porting_plan.md
platform/android/: build.gradle  settings.gradle
platform/android/app/: CMakeLists.txt  build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/unxchr/xdjunx/: MainActivity.java
platform/android/app/src/main/res/values/: strings.xml
platform/ios/: AppController.m  Entitlements.plist  Info.plist  rcore_ios.m
src/: main.c  raylib.h  version.h
src/audio/: engine.c  engine.cpp  engine.h  engine_bridge.cpp  mixxx_engine.cpp  mixxx_engine.h  scalers.c  scalers.h
src/audio/fx/: dsp_utils.c  dsp_utils.h
src/core/: audio_backend.c  audio_backend.h  logger.c  logger.h  system_info.c  system_info.h
src/core/hid/: hid_backend.h  hid_backend_win.c  hid_handler.c  hid_mapper.c  hid_mapper.h
src/core/logic/: control_object.c  control_object.h  defaults.h  quantize.c  quantize.h  settings_io.c  settings_io.h  sync.c
src/core/midi/: midi_backend_win.c  midi_handler.c  midi_handler.h  midi_mapper.c  midi_mapper.h  midi_message.h  midi_scripts.c  midi_scripts.h  midi_translation.c  midi_translation.h
src/engine/: channelhandle.h  engine.h  enginebuffer.cpp  enginebuffer.h  enginemixer.h  engineobject.cpp  engineobject.h  readaheadmanager.cpp  readaheadmanager.h  shim.h  slipmodestate.h
src/engine/audio/: frame.h  signalinfo.h  types.h
src/engine/cachingreader/: cachingreader.h  simplecachingreader.h
src/engine/control/: controlobject.h  controlproxy.h  controlvalue.h  pollingcontrolproxy.h
src/engine/filters/: enginefilterbiquad1.cpp  enginefilterbiquad1.h  enginefilteriir.h  enginefilterlinkwitzriley4.cpp  enginefilterlinkwitzriley4.h
src/engine/fx/: dsp_utils.c  dsp_utils.h
src/engine/preferences/: usersettings.h
src/engine/scalers/: enginebufferscale.cpp  enginebufferscale.h  enginebufferscalerubberband.cpp  enginebufferscalerubberband.h  enginebufferscalest.cpp  enginebufferscalest.h
src/engine/soundio/: soundmanagerconfig.h
src/engine/sync/: syncable.h
src/engine/track/: bpm.h  track_decl.h
src/engine/util/: assert.h  defs.h  engine_math.cpp  engine_math.h  fpclassify.h  math.h  optional.h  parented_ptr.h  platform.h  rampingvalue.h  sample.h  sample_util.cpp  span.h  (+1 more)
src/input/: keyboard.c  keyboard.h
src/logic/: control_object.c  quantize.c  quantize.h  settings_io.c  sync.c  sync.h
src/midi/: midi_handler.c  midi_handler.h  midi_mapper.c  midi_message.h
src/platform/: ios_utils.m
tools/: bin2c.c  bin2c.exe   build_raylib.bat  build_raylib.sh  gen_splash_bundle.c
(+111 files in other folders)
